tdf#108867 sw: fix dangling text box frame format pointers in Undo

If the text box is removed, the SwFrameFormat of the drawing shape still
retains a pointer to the frame SwFrameFormat, and the latter is owned by
the SwUndoFlyBase.  This is pretty bad, so try to clear & reset the
connection between them in SwUndoFlyBase::InsFly() and DelFly().

Hopefully nothing will actually delete the drawing shape SwFrameFormat
while the Undo object is alive.

Note that when the SwUndoInsLayFormat is created when the text box is
added, the GetOtherTextBoxFormat() returns null as it's set later,
that's why the constructor can't do anything.

Change-Id: Iae562b6f8f272e47b2b5cf8ee80778db15d29ce0
(cherry picked from commit 2e486daff35ab16e810bfdafb24b19bcbf2fe8cd)
Reviewed-on: https://gerrit.libreoffice.org/40270
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>